2005-07-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	Finally fixed the matrix to accept to be the key view of the window.

2005-07-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/export_library.rb:

	Removed a duplicated 'EOS' statement introduced in the previous commit.

	* lib/alexandria/macui/AddBookController.rb,
	  lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/TableView.rb:

	- Fix a bug when deselecting all cells in the matrix after a right click ;
	- Fix a bug when ending a drag-and-drop in the table view that could
	  start editing the cell ;
	- In the results table of the add book dialog, write the edition if a
	  book has more than one edition.

2005-07-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/TableView.rb:

	- Added some contextual popup menus in both libraries and books views ;
	- Disable the export menu item if the selected library is empty.

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/macui/AddBookController.rb,
	  lib/alexandria/macui/BooksDataSource.rb,
	  lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/Matrix.rb,
	  lib/alexandria/macui/PreferencesController.rb,
	  lib/alexandria/macui/TableView.rb,
	  lib/alexandria/macui/MainWindow.nib/classes.nib,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	- Fixed some bugs in the Add Book window ;
	- Fixed a bug related to the empty selection of table views ;
	- Added 'View/Online Information At' menu ;
	- Added books table view column sorting ;
	- Added books matrix sorting (via 'View/Arrange Icons By' menu).

2005-06-30  Laurent Sansonetti  <lrz@gnome.org>
