@@ -1,3 +1,10 @@
+2005-07-05  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/macui/MainController.rb,
+	  lib/alexandria/macui/Matrix.rb:
+
+	Overrides the selection drawing of the matrix to mimic the Finder.
+
 2005-07-04  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/macui/MainController.rb,
